--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 <script src="js/typed.min.js"></script>
 <script src="js/scripts.min.js"></script>
-<script src="js/particles.min.js"></script>
+<!-- <script src="js/particles.min.js"></script> -->
 
 
 
